lesson7/prometheus-init.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
