lesson7/prometheus-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: prometheus
  serviceName: "prometheus"
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
#      initContainers:
#        - name: init-prometheus
#          image: prom/prometheus:v2.19.2
#          command: [ 'sh', '-c', "" ]
      containers:
        - name: prometheus
          image: prom/prometheus:v2.19.2
          ports:
            - containerPort: 9090
              name: prometheus
          volumeMounts:
            - name: prometheus
              mountPath: /prometheus
            - name: prometheus-config
              mountPath: /etc/prometheus
              readOnly: true
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config
  volumeClaimTemplates:
    - metadata:
        name: prometheus
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
